--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,12 +8,13 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">27</td><td></td><td></td></tr>
+<tr><th colspan="7">Suite-TestNG Example</th></tr>
+<tr><td><a href="#t0">TestCase of TestNG</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">33</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">testExample.TestNG02</td><td><a href="#m0">Test04</a></td><td rowspan="1">1535403434309</td><td rowspan="1">8</td></tr><tr class="passedeven"><td><a href="#m1">Test05</a></td><td rowspan="1">1535403434318</td><td rowspan="1">1</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite-TestNG Example</th></tr></tbody><tbody id="t0"><tr><th colspan="4">TestCase of TestNG &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">testExample.TestNG01</td><td><a href="#m0">testCase02</a></td><td rowspan="1">1535406105613</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m1">testCase03</a></td><td rowspan="1">1535406105616</td><td rowspan="1">1</td></tr><tr class="passedodd"><td rowspan="1">testExample.TestNG02</td><td><a href="#m2">Test05</a></td><td rowspan="1">1535406105602</td><td rowspan="1">9</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">testExample.TestNG02#Test04</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">testExample.TestNG02#Test05</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>TestCase of TestNG</h2><h3 id="m0">testExample.TestNG01#testCase02</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">testExample.TestNG01#testCase03</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">testExample.TestNG02#Test05</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
