--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,8 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="67b872">  <td>18/08/27 16:57:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG02.Test04()[pri:0, instance:testExample.TestNG02@215be6bb]">Test04</td> 
+<tr bgcolor="67b872">  <td>18/08/27 17:21:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG01.testCase01()[pri:0, instance:testExample.TestNG01@215be6bb]">testCase01</td> 
   <td>main@1620303253</td>   <td></td> </tr>
-<tr bgcolor="67b872">  <td>18/08/27 16:57:14</td>   <td>9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG02.Test05()[pri:0, instance:testExample.TestNG02@215be6bb]">Test05</td> 
+<tr bgcolor="67b872">  <td>18/08/27 17:21:55</td>   <td>10</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG01.testCase02()[pri:0, instance:testExample.TestNG01@215be6bb]">testCase02</td> 
+  <td>main@1620303253</td>   <td></td> </tr>
+<tr bgcolor="67b872">  <td>18/08/27 17:21:55</td>   <td>13</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG01.testCase03()[pri:0, instance:testExample.TestNG01@215be6bb]">testCase03</td> 
   <td>main@1620303253</td>   <td></td> </tr>
 </table>
