--- a/test-output/old/Suite-TestNG Example/methods-alphabetical.html
+++ b/test-output/old/Suite-TestNG Example/methods-alphabetical.html
@@ -1,10 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite-TestNG Example</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="62ada6">  <td>18/08/27 17:41:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG02.Test05()[pri:0, instance:testExample.TestNG02@56f4468b]">Test05</td> 
-  <td>main@1413653265</td>   <td></td> </tr>
-<tr bgcolor="acb575">  <td>18/08/27 17:41:45</td>   <td>11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG01.testCase02()[pri:0, instance:testExample.TestNG01@6cc4c815]">testCase02</td> 
-  <td>main@1413653265</td>   <td></td> </tr>
-<tr bgcolor="acb575">  <td>18/08/27 17:41:45</td>   <td>14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG01.testCase03()[pri:0, instance:testExample.TestNG01@6cc4c815]">testCase03</td> 
-  <td>main@1413653265</td>   <td></td> </tr>
+<tr bgcolor="7471b5">  <td>18/08/27 17:57:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG02.Test04()[pri:0, instance:testExample.TestNG02@6d00a15d]">Test04</td> 
+  <td>main@125622176</td>   <td></td> </tr>
+<tr bgcolor="7471b5">  <td>18/08/27 17:57:03</td>   <td>3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG02.Test05()[pri:0, instance:testExample.TestNG02@6d00a15d]">Test05</td> 
+  <td>main@125622176</td>   <td></td> </tr>
+<tr bgcolor="6773bc">  <td>18/08/27 17:57:02</td>   <td>-17</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG01.testCase01()[pri:0, instance:testExample.TestNG01@36d4b5c]">testCase01</td> 
+  <td>main@125622176</td>   <td></td> </tr>
+<tr bgcolor="6773bc">  <td>18/08/27 17:57:03</td>   <td>-8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG01.testCase02()[pri:0, instance:testExample.TestNG01@36d4b5c]">testCase02</td> 
+  <td>main@125622176</td>   <td></td> </tr>
+<tr bgcolor="6773bc">  <td>18/08/27 17:57:03</td>   <td>-5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG01.testCase03()[pri:0, instance:testExample.TestNG01@36d4b5c]">testCase03</td> 
+  <td>main@125622176</td>   <td></td> </tr>
 </table>
